--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,9 @@ a:hover {
   padding: 5px 0;
 }
 
+.navbar-header .navbar-brand .navLogo {
+  margin-top: 0;
+}
 .navbar-header .navbar-brand a {
   height: auto;
   display: inline-block;
@@ -301,7 +304,7 @@ a:hover {
 }
 
 #hero-area {
-  background: url("../images/slider.jpg") no-repeat 50%;
+  background: url("../images/daiga-ellaby-154931-min.jpg") no-repeat 50%;
   background-size: cover;
   background-attachment: fixed;
   padding: 230px 0;
@@ -313,7 +316,7 @@ a:hover {
 #hero-area:before {
   content: '';
   z-index: 9;
-  background: rgba(255, 255, 255, 0.78);
+  background: rgba(255, 255, 255, 0.74);
   position: absolute;
   top: 0;
   left: 0;
@@ -336,12 +339,12 @@ a:hover {
 }
 
 #hero-area h2 {
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 300;
   margin-bottom: 38px;
   line-height: 27px;
   text-transform: uppercase;
-  color: #666;
+  color: #000;
   font-family: 'Roboto', sans-serif;
   margin-top: 25px;
 }
