--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,45 +32,55 @@
 
 <body>
 
- <!--
+    <!--
         ==================================================
         Header Section Start
         ================================================== -->
-        <header id="top-bar" class="navbar-fixed-top animated-header">
-            <div class="container">
-                <div class="navbar-header">
-                    <!-- responsive nav button -->
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+    <header id="top-bar" class="navbar-fixed-top animated-header">
+        <div class="container">
+            <div class="navbar-header">
+                <!-- responsive nav button -->
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    </button>
-                    <!-- /responsive nav button -->
-                    
-                    <!-- logo -->
-                    <div class="navbar-brand">
-                       <h3 class=navLogo><a href="index.html" >
-                            CIARA'S TOTS
-                        </a></h4> 
-                    </div>
-                    <!-- /logo -->
+                </button>
+                <!-- /responsive nav button -->
+
+                <!-- logo -->
+                <div class="navbar-brand">
+                    <a href="index.html">
+                        <img class="navLogo" src="images/ciaras.png" />
+                    </a>
                 </div>
-                <!-- main menu -->
-                <nav class="collapse navbar-collapse navbar-right" role="navigation">
-                    <div class="main-menu">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="about.html">Ethos</a></li>
-                            <li><a href="about.html">Curriculum</a></li>
-                            <li><a href="decide.html">Helping You Decide</a></li>
-                            <li><a href="service.html">Phyiscal Development</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </nav>
-                <!-- /main nav -->
+                <!-- /logo -->
             </div>
-        </header>
+            <!-- main menu -->
+            <nav class="collapse navbar-collapse navbar-right" role="navigation">
+                <div class="main-menu">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="about.html">Ethos</a>
+                        </li>
+                        <li>
+                            <a href="about.html">Curriculum</a>
+                        </li>
+                        <li>
+                            <a href="decide.html">Helping You Decide</a>
+                        </li>
+                        <li>
+                            <a href="service.html">Phyiscal Development</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <!-- /main nav -->
+        </div>
+    </header>
 
     {{content}}
 
