--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,16 +61,13 @@
                 <div class="main-menu">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="about.html">Ethos</a>
-                        </li>
-                        <li>
-                            <a href="about.html">Curriculum</a>
+                            <a href="curriculum.html">Curriculum</a>
                         </li>
                         <li>
                             <a href="decide.html">Helping You Decide</a>
                         </li>
                         <li>
-                            <a href="service.html">Phyiscal Development</a>
+                            <a href="development.html">Phyiscal Development</a>
                         </li>
                         <li>
                             <a href="contact.html">Contact Us</a>
@@ -82,8 +79,47 @@
         </div>
     </header>
 
+    <body>
     {{content}}
-
+</body>
+    <footer id="footer">
+        <div class="container">
+            <div class="col-md-8">
+                <p class="copyright">Copyright:
+                    <span>
+                        <script>document.write(new Date().getFullYear())</script>
+                    </span> Design and Developed by
+                    <a href="http://www.Themefisher.com" target="_blank">Themefisher</a>.
+                </p>
+            </div>
+            <div class="col-md-4">
+                <!-- Social Media -->
+                <ul class="social">
+                    <li>
+                        <a href="http://wwww.fb.com/themefisher" class="Facebook">
+                            <i class="ion-social-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://wwww.twitter.com/themefisher" class="Twitter">
+                            <i class="ion-social-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="Linkedin">
+                            <i class="ion-social-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://wwww.fb.com/themefisher" class="Google Plus">
+                            <i class="ion-social-googleplus"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <!-- /#footer -->
     <!-- Template Javascript Files
 	================================================== -->
     <!-- jquery -->
