Removed old images. Fb link opens in new window

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
                 <!-- Social Media -->
                 <ul class="social">
                     <li>
-                        <a href="https://www.facebook.com/Ciaras-Tots-1172980112729771/" class="Facebook">
+                        <a target="_blank" href="https://www.facebook.com/Ciaras-Tots-1172980112729771/" class="Facebook">
                             <i class="ion-social-facebook"></i>
                         </a>
                     </li>
