Start of gallery

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="plugins/owl-carousel/owl.theme.css">
     <!-- Fancybox -->
     <link rel="stylesheet" href="plugins/facncybox/jquery.fancybox.css">
+    <!-- Photswipe css file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/default-skin/default-skin.min.css">
     <!-- template main css file -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -70,6 +73,9 @@
                             <a href="development.html">Phyiscal Development</a>
                         </li>
                         <li>
+                            <a href="gallery.html">Gallery</a>
+                        </li>
+                        <li>
                             <a href="contact.html">Contact Us</a>
                         </li>
                     </ul>
@@ -80,27 +86,26 @@
     </header>
 
     <body>
-    {{content}}
-</body>
-    <footer id="footer">
-        <div class="container">
-            <div class="col-md-8">
-                <p class="copyright">Copyright:
-                    <span>
-                        <script>document.write(new Date().getFullYear())</script>
-                    </span> Design and Developed by
-                    <a href="http://www.Themefisher.com" target="_blank">Themefisher</a>.
-                </p>
-            </div>
-            <div class="col-md-4">
-                <!-- Social Media -->
-                <ul class="social">
-                    <li>
-                        <a target="_blank" href="https://www.facebook.com/Ciaras-Tots-1172980112729771/" class="Facebook">
-                            <i class="ion-social-facebook"></i>
-                        </a>
-                    </li>
-                    <!-- <li>
+        {{content}}
+        <footer id="footer">
+            <div class="container">
+                <div class="col-md-8">
+                    <p class="copyright">Copyright:
+                        <span>
+                            <script>document.write(new Date().getFullYear())</script>
+                        </span> Design and Developed by
+                        <a href="http://www.Themefisher.com" target="_blank">Themefisher</a>.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <!-- Social Media -->
+                    <ul class="social">
+                        <li>
+                            <a target="_blank" href="https://www.facebook.com/Ciaras-Tots-1172980112729771/" class="Facebook">
+                                <i class="ion-social-facebook"></i>
+                            </a>
+                        </li>
+                        <!-- <li>
                         <a href="http://wwww.twitter.com/themefisher" class="Twitter">
                             <i class="ion-social-twitter"></i>
                         </a>
@@ -115,30 +120,34 @@
                             <i class="ion-social-googleplus"></i>
                         </a>
                     </li> -->
-                </ul>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </footer>
-    <!-- /#footer -->
-    <!-- Template Javascript Files
+        </footer>
+        <!-- /#footer -->
+        <!-- Template Javascript Files
 	================================================== -->
-    <!-- jquery -->
-    <script src="plugins/jQurey/jquery.min.js"></script>
-    <!-- Form Validation -->
-    <script src="plugins/form-validation/jquery.form.js"></script>
-    <script src="plugins/form-validation/jquery.validate.min.js"></script>
-    <!-- owl carouserl js -->
-    <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
-    <!-- bootstrap js -->
-    <script src="plugins/bootstrap/bootstrap.min.js"></script>
-    <!-- wow js -->
-    <script src="plugins/wow-js/wow.min.js"></script>
-    <!-- slider js -->
-    <script src="plugins/slider/slider.js"></script>
-    <!-- Fancybox -->
-    <script src="plugins/facncybox/jquery.fancybox.js"></script>
-    <!-- template main js -->
-    <script src="js/main.js"></script>
-</body>
+        <!-- jquery -->
+        <script src="plugins/jQurey/jquery.min.js"></script>
+        <!-- Form Validation -->
+        <script src="plugins/form-validation/jquery.form.js"></script>
+        <script src="plugins/form-validation/jquery.validate.min.js"></script>
+        <!-- owl carouserl js -->
+        <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+        <!-- bootstrap js -->
+        <script src="plugins/bootstrap/bootstrap.min.js"></script>
+        <!-- wow js -->
+        <script src="plugins/wow-js/wow.min.js"></script>
+        <!-- slider js -->
+        <script src="plugins/slider/slider.js"></script>
+        <!-- Fancybox -->
+        <script src="plugins/facncybox/jquery.fancybox.js"></script>
+        <!-- photoswipe js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe-ui-default.min.js"></script>
+
+        <!-- template main js -->
+        <script src="js/main.js"></script>
+    </body>
 
 </html>
