--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,8 @@
     <link rel="stylesheet" href="plugins/owl-carousel/owl.theme.css">
     <!-- Fancybox -->
     <link rel="stylesheet" href="plugins/facncybox/jquery.fancybox.css">
-    <!-- Photswipe css file -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/default-skin/default-skin.min.css">
+    <!-- lightSlider css file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css">
     <!-- template main css file -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -142,9 +141,8 @@
         <script src="plugins/slider/slider.js"></script>
         <!-- Fancybox -->
         <script src="plugins/facncybox/jquery.fancybox.js"></script>
-        <!-- photoswipe js -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.2/photoswipe-ui-default.min.js"></script>
+        <!-- lightSlider js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
 
         <!-- template main js -->
         <script src="js/main.js"></script>
