--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>
+        {{ page.title }} | Ciara's Tots
+      </title>
     <!-- Mobile Specific Metas
         ================================================== -->
     <meta name="format-detection" content="telephone=no">
