--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,19 +65,19 @@
                 <div class="main-menu">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="curriculum.html">Curriculum</a>
+                            <a href="curriculum">Curriculum</a>
                         </li>
                         <li>
-                            <a href="decide.html">Helping You Decide</a>
+                            <a href="decide">Helping You Decide</a>
                         </li>
                         <li>
-                            <a href="development.html">Phyiscal Development</a>
+                            <a href="development">Phyiscal Development</a>
                         </li>
                         <li>
-                            <a href="gallery.html">Gallery</a>
+                            <a href="gallery">Gallery</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact Us</a>
+                            <a href="contact">Contact Us</a>
                         </li>
                     </ul>
                 </div>
