--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
 
                 <!-- logo -->
                 <div class="navbar-brand">
-                    <a href="index.html">
+                    <a href="/">
                         <img class="navLogo" src="images/ciaras.png" />
                     </a>
                 </div>
