--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,10 @@
                         <li>
                             <a href="contact">Contact Us</a>
                         </li>
+                        <li>
+                            <a target="_blank" href="https://www.facebook.com/Ciaras-Tots-1172980112729771/" class="Facebook">
+                                <i class="ion-social-facebook"></i>
+                            </a>                        </li>
                     </ul>
                 </div>
             </nav>
