--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,22 +16,22 @@
     <!-- Template CSS Files
         ================================================== -->
     <!-- Twitter Bootstrs CSS -->
-    <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/plugins/bootstrap/bootstrap.min.css">
     <!-- Ionicons Fonts Css -->
-    <link rel="stylesheet" href="plugins/ionicons/ionicons.min.css">
+    <link rel="stylesheet" href="/plugins/ionicons/ionicons.min.css">
     <!-- animate css -->
-    <link rel="stylesheet" href="plugins/animate-css/animate.css">
+    <link rel="stylesheet" href="/plugins/animate-css/animate.css">
     <!-- Hero area slider css-->
-    <link rel="stylesheet" href="plugins/slider/slider.css">
+    <link rel="stylesheet" href="/plugins/slider/slider.css">
     <!-- owl craousel css -->
-    <link rel="stylesheet" href="plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="plugins/owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="/plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="/plugins/owl-carousel/owl.theme.css">
     <!-- Fancybox -->
-    <link rel="stylesheet" href="plugins/facncybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="/plugins/facncybox/jquery.fancybox.css">
     <!-- lightSlider css file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css">
     <!-- template main css file -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
