--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@
     <!-- Template CSS Files
         ================================================== -->
     <!-- Twitter Bootstrs CSS -->
-    <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/ciarastotspublic/bootstrap/bootstrap.min.css">
     <!-- Ionicons Fonts Css -->
-    <link rel="stylesheet" href="/plugins/ionicons/ionicons.min.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/ionicons/ionicons.min.css">
     <!-- animate css -->
-    <link rel="stylesheet" href="/plugins/animate-css/animate.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/animate-css/animate.css">
     <!-- Hero area slider css-->
-    <link rel="stylesheet" href="/plugins/slider/slider.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/slider/slider.css">
     <!-- owl craousel css -->
     <link rel="stylesheet" href="/ciarastotspublic/plugins/owl-carousel/owl.carousel.css">
     <link rel="stylesheet" href="/ciarastotspublic/plugins/owl-carousel/owl.theme.css">
@@ -31,7 +31,7 @@
     <!-- lightSlider css file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css">
     <!-- template main css file -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/ciarastotspublic/css/style.css">
 </head>
 
 <body>
@@ -133,25 +133,25 @@
         <!-- Template Javascript Files
 	================================================== -->
         <!-- jquery -->
-        <script src="plugins/jQurey/jquery.min.js"></script>
+        <script src="/ciarastotspublic/plugins/jQurey/jquery.min.js"></script>
         <!-- Form Validation -->
-        <script src="plugins/form-validation/jquery.form.js"></script>
-        <script src="plugins/form-validation/jquery.validate.min.js"></script>
+        <script src="/ciarastotspublic/plugins/form-validation/jquery.form.js"></script>
+        <script src="/ciarastotspublic/plugins/form-validation/jquery.validate.min.js"></script>
         <!-- owl carouserl js -->
-        <script src="plugins/owl-carousel/owl.carousel.min.js"></script>
+        <script src="/ciarastotspublic/plugins/owl-carousel/owl.carousel.min.js"></script>
         <!-- bootstrap js -->
-        <script src="plugins/bootstrap/bootstrap.min.js"></script>
+        <script src="/ciarastotspublic/plugins/bootstrap/bootstrap.min.js"></script>
         <!-- wow js -->
-        <script src="plugins/wow-js/wow.min.js"></script>
+        <script src="/ciarastotspublic/plugins/wow-js/wow.min.js"></script>
         <!-- slider js -->
-        <script src="plugins/slider/slider.js"></script>
+        <script src="/ciarastotspublic/plugins/slider/slider.js"></script>
         <!-- Fancybox -->
-        <script src="plugins/facncybox/jquery.fancybox.js"></script>
+        <script src="/ciarastotspublic/plugins/facncybox/jquery.fancybox.js"></script>
         <!-- lightSlider js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
 
         <!-- template main js -->
-        <script src="js/main.js"></script>
+        <script src="/ciarastotspublic/js/main.js"></script>
     </body>
 
 </html>
