--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,19 +65,19 @@
                 <div class="main-menu">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="curriculum">Curriculum</a>
+                            <a href="Curriculum/">Curriculum</a>
                         </li>
                         <li>
-                            <a href="decide">Helping You Decide</a>
+                            <a href="Decide/">Helping You Decide</a>
                         </li>
                         <li>
-                            <a href="development">Phyiscal Development</a>
+                            <a href="Development/">Phyiscal Development</a>
                         </li>
                         <li>
-                            <a href="gallery">Gallery</a>
+                            <a href="Gallery/">Gallery</a>
                         </li>
                         <li>
-                            <a href="contact">Contact Us</a>
+                            <a href="Contact/">Contact Us</a>
                         </li>
                         <li>
                             <a target="_blank" href="https://www.facebook.com/Ciaras-Tots-1172980112729771/" class="Facebook">
