--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,19 +65,19 @@
                 <div class="main-menu">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="/Curriculum/">Curriculum</a>
+                            <a href="{{ site.gitprefix }}/Curriculum/">Curriculum</a>
                         </li>
                         <li>
-                            <a href="/Decide/">Helping You Decide</a>
+                            <a href="{{ site.gitprefix }}/Decide/">Helping You Decide</a>
                         </li>
                         <li>
-                            <a href="/Development/">Phyiscal Development</a>
+                            <a href="{{ site.gitprefix }}/Development/">Phyiscal Development</a>
                         </li>
                         <li>
-                            <a href="/Gallery/">Gallery</a>
+                            <a href="{{ site.gitprefix }}/Gallery/">Gallery</a>
                         </li>
                         <li>
-                            <a href="/Contact/">Contact Us</a>
+                            <a href="{{ site.gitprefix }}/Contact/">Contact Us</a>
                         </li>
                         <li>
                             <a target="_blank" href="https://www.facebook.com/Ciaras-Tots-1172980112729771/" class="Facebook">
