--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,10 +65,10 @@
                 <div class="main-menu">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="{{ site.gitprefix }}/Curriculum/">Curriculum</a>
+                            <a href="/{{ site.gitprefix }}/Curriculum/">Curriculum</a>
                         </li>
                         <li>
-                            <a href="{{ site.gitprefix }}/Decide/">Helping You Decide</a>
+                            <a href="/{{ site.gitprefix }}/Decide/">Helping You Decide</a>
                         </li>
                         <li>
                             <a href="{{ site.gitprefix }}/Development/">Phyiscal Development</a>
