--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,22 +16,22 @@
     <!-- Template CSS Files
         ================================================== -->
     <!-- Twitter Bootstrs CSS -->
-    <link rel="stylesheet" href="/ciarastotspublic/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ site.gitprefix }}/css/bootstrap.min.css">
     <!-- Ionicons Fonts Css -->
-    <link rel="stylesheet" href="/ciarastotspublic/plugins/ionicons/ionicons.min.css">
+    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/ionicons/ionicons.min.css">
     <!-- animate css -->
-    <link rel="stylesheet" href="/ciarastotspublic/plugins/animate-css/animate.css">
+    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/animate-css/animate.css">
     <!-- Hero area slider css-->
-    <link rel="stylesheet" href="/ciarastotspublic/plugins/slider/slider.css">
+    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/slider/slider.css">
     <!-- owl craousel css -->
-    <link rel="stylesheet" href="/ciarastotspublic/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="/ciarastotspublic/plugins/owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/owl-carousel/owl.theme.css">
     <!-- Fancybox -->
-    <link rel="stylesheet" href="/ciarastotspublic/plugins/facncybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/facncybox/jquery.fancybox.css">
     <!-- lightSlider css file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css">
     <!-- template main css file -->
-    <link rel="stylesheet" href="/ciarastotspublic/css/style.css">
+    <link rel="stylesheet" href="{{ site.gitprefix }}/css/style.css">
 </head>
 
 <body>
@@ -65,10 +65,10 @@
                 <div class="main-menu">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="/{{ site.gitprefix }}/Curriculum/">Curriculum</a>
+                            <a href="{{ site.gitprefix }}/Curriculum/">Curriculum</a>
                         </li>
                         <li>
-                            <a href="/{{ site.gitprefix }}/Decide/">Helping You Decide</a>
+                            <a href="{{ site.gitprefix }}/Decide/">Helping You Decide</a>
                         </li>
                         <li>
                             <a href="{{ site.gitprefix }}/Development/">Phyiscal Development</a>
