--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
                 <!-- logo -->
                 <div class="navbar-brand">
                     <a href="/">
-                        <img class="navLogo" src="images/ciaras.png" />
+                        <img class="navLogo" src="{{ site.gitprefix }}/images/ciaras.png" />
                     </a>
                 </div>
                 <!-- /logo -->
@@ -133,25 +133,25 @@
         <!-- Template Javascript Files
 	================================================== -->
         <!-- jquery -->
-        <script src="/ciarastotspublic/plugins/jQurey/jquery.min.js"></script>
+        <script src="{{ site.gitprefix }}/plugins/jQurey/jquery.min.js"></script>
         <!-- Form Validation -->
-        <script src="/ciarastotspublic/plugins/form-validation/jquery.form.js"></script>
-        <script src="/ciarastotspublic/plugins/form-validation/jquery.validate.min.js"></script>
+        <script src="{{ site.gitprefix }}/plugins/form-validation/jquery.form.js"></script>
+        <script src="{{ site.gitprefix }}/plugins/form-validation/jquery.validate.min.js"></script>
         <!-- owl carouserl js -->
-        <script src="/ciarastotspublic/plugins/owl-carousel/owl.carousel.min.js"></script>
+        <script src="{{ site.gitprefix }}/plugins/owl-carousel/owl.carousel.min.js"></script>
         <!-- bootstrap js -->
-        <script src="/ciarastotspublic/plugins/bootstrap/bootstrap.min.js"></script>
+        <script src="{{ site.gitprefix }}/plugins/bootstrap/bootstrap.min.js"></script>
         <!-- wow js -->
-        <script src="/ciarastotspublic/plugins/wow-js/wow.min.js"></script>
+        <script src="{{ site.gitprefix }}/plugins/wow-js/wow.min.js"></script>
         <!-- slider js -->
-        <script src="/ciarastotspublic/plugins/slider/slider.js"></script>
+        <script src="{{ site.gitprefix }}/plugins/slider/slider.js"></script>
         <!-- Fancybox -->
-        <script src="/ciarastotspublic/plugins/facncybox/jquery.fancybox.js"></script>
+        <script src="{{ site.gitprefix }}/plugins/facncybox/jquery.fancybox.js"></script>
         <!-- lightSlider js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
 
         <!-- template main js -->
-        <script src="/ciarastotspublic/js/main.js"></script>
+        <script src="{{ site.gitprefix }}/js/main.js"></script>
     </body>
 
 </html>
