--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
 
                 <!-- logo -->
                 <div class="navbar-brand">
-                    <a href="/">
+                    <a href="{{ site.gitprefix }}/">
                         <img class="navLogo" src="{{ site.gitprefix }}/images/ciaras.png" />
                     </a>
                 </div>
