--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -147,8 +147,8 @@
         <script src="{{ site.gitprefix }}/plugins/slider/slider.js"></script>
         <!-- Fancybox -->
         <script src="{{ site.gitprefix }}/plugins/facncybox/jquery.fancybox.js"></script>
-        <!-- lightSlider js -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
+        <!-- galleria js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js"></script>
 
         <!-- template main js -->
         <script src="{{ site.gitprefix }}/js/main.js"></script>
