--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,22 +16,22 @@
     <!-- Template CSS Files
         ================================================== -->
     <!-- Twitter Bootstrs CSS -->
-    <link rel="stylesheet" href="{{ site.gitprefix }}/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/ciarastotspublic/css/bootstrap.min.css">
     <!-- Ionicons Fonts Css -->
-    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/ionicons/ionicons.min.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/ionicons/ionicons.min.css">
     <!-- animate css -->
-    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/animate-css/animate.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/animate-css/animate.css">
     <!-- Hero area slider css-->
-    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/slider/slider.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/slider/slider.css">
     <!-- owl craousel css -->
-    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/owl-carousel/owl.carousel.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/owl-carousel/owl.theme.css">
     <!-- Fancybox -->
-    <link rel="stylesheet" href="{{ site.gitprefix }}/plugins/facncybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="/ciarastotspublic/plugins/facncybox/jquery.fancybox.css">
     <!-- lightSlider css file -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css">
     <!-- template main css file -->
-    <link rel="stylesheet" href="{{ site.gitprefix }}/css/style.css">
+    <link rel="stylesheet" href="/ciarastotspublic/css/style.css">
 </head>
 
 <body>
@@ -54,8 +54,8 @@
 
                 <!-- logo -->
                 <div class="navbar-brand">
-                    <a href="{{ site.gitprefix }}/">
-                        <img class="navLogo" src="{{ site.gitprefix }}/images/ciaras.png" />
+                    <a href="/ciarastotspublic/">
+                        <img class="navLogo" src="/ciarastotspublic/images/ciaras.png" />
                     </a>
                 </div>
                 <!-- /logo -->
@@ -65,19 +65,19 @@
                 <div class="main-menu">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="{{ site.gitprefix }}/Curriculum/">Curriculum</a>
+                            <a href="/ciarastotspublic/Curriculum/">Curriculum</a>
                         </li>
                         <li>
-                            <a href="{{ site.gitprefix }}/Decide/">Helping You Decide</a>
+                            <a href="/ciarastotspublic/Decide/">Helping You Decide</a>
                         </li>
                         <li>
-                            <a href="{{ site.gitprefix }}/Development/">Phyiscal Development</a>
+                            <a href="/ciarastotspublic/Development/">Phyiscal Development</a>
                         </li>
                         <li>
-                            <a href="{{ site.gitprefix }}/Gallery/">Gallery</a>
+                            <a href="/ciarastotspublic/Gallery/">Gallery</a>
                         </li>
                         <li>
-                            <a href="{{ site.gitprefix }}/Contact/">Contact Us</a>
+                            <a href="/ciarastotspublic/Contact/">Contact Us</a>
                         </li>
                         <li>
                             <a target="_blank" href="https://www.facebook.com/Ciaras-Tots-1172980112729771/" class="Facebook">
@@ -133,26 +133,26 @@
         <!-- Template Javascript Files
 	================================================== -->
         <!-- jquery -->
-        <script src="{{ site.gitprefix }}/plugins/jQurey/jquery.min.js"></script>
+        <script src="/ciarastotspublic/plugins/jQurey/jquery.min.js"></script>
         <!-- Form Validation -->
-        <script src="{{ site.gitprefix }}/plugins/form-validation/jquery.form.js"></script>
-        <script src="{{ site.gitprefix }}/plugins/form-validation/jquery.validate.min.js"></script>
+        <script src="/ciarastotspublic/plugins/form-validation/jquery.form.js"></script>
+        <script src="/ciarastotspublic/plugins/form-validation/jquery.validate.min.js"></script>
         <!-- owl carouserl js -->
-        <script src="{{ site.gitprefix }}/plugins/owl-carousel/owl.carousel.min.js"></script>
+        <script src="/ciarastotspublic/plugins/owl-carousel/owl.carousel.min.js"></script>
         <!-- bootstrap js -->
-        <script src="{{ site.gitprefix }}/plugins/bootstrap/bootstrap.min.js"></script>
+        <script src="/ciarastotspublic/plugins/bootstrap/bootstrap.min.js"></script>
         <!-- wow js -->
-        <script src="{{ site.gitprefix }}/plugins/wow-js/wow.min.js"></script>
+        <script src="/ciarastotspublic/plugins/wow-js/wow.min.js"></script>
         <!-- slider js -->
-        <script src="{{ site.gitprefix }}/plugins/slider/slider.js"></script>
+        <script src="/ciarastotspublic/plugins/slider/slider.js"></script>
         <!-- Fancybox -->
-        <script src="{{ site.gitprefix }}/plugins/facncybox/jquery.fancybox.js"></script>
+        <script src="/ciarastotspublic/plugins/facncybox/jquery.fancybox.js"></script>
         <!-- galleria js -->
         <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/galleria/1.5.7/galleria.min.js"></script>
 
         <!-- template main js -->
-        <script src="{{ site.gitprefix }}/js/main.js"></script>
+        <script src="/ciarastotspublic/js/main.js"></script>
     </body>
 
 </html>
